# risk-hotpath-hft

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  rish.patch
.github/workflows/: ci.yml
config/: prometheus.yml
grafana/provisioning/dashboards/: dashboard.json  dashboard.yml
risk_core/: Cargo.toml
risk_core/benches/: throughput.rs
risk_core/src/: envelope.rs  lib.rs  main.rs
risk_core/src/feed/: mod.rs  orderbook.rs  simulator.rs
risk_core/src/replay/: runner.rs
risk_core/src/risk/: checks.rs  engine.rs  mod.rs
risk_core/src/store/: clickhouse.rs
risk_core/src/telemetry/: metrics.rs
scripts/: bootstrap_project.py
